# test_project_src

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comparer  converter
scripts/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  comparer  converter  test.sh  test.sh.bak
src/: CMakeLists.txt
src/bmp/: bmp.c  bmp.h
src/comparer/: comparer.c
src/converter/: converter.c
test/converter/: checker.py
